commit #4 with UI

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+
+    <title>Fashion-Insta</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <style>
@@ -47,7 +49,7 @@
 <body>
 <div class="desktop-logoContainer" data-reactid="15" style="height: 50px; width: 50px" ><img width="150" height="100" src="../static/myntra.jpeg" alt="myntra logo"></mg></div>
 <form class="example" action="/getTrendingByCategory" style="margin:auto;max-width:800px">
-    <input type="text" placeholder="Search Trending example insta:shoes" name="query">
+    <input type="text" placeholder="Search Trending, for example insta:shoes" name="query">
     <button type="submit"><i class="fa fa-search"></i></button>
 </form>
 
