--- a/templates/shoetrending.html
+++ b/templates/shoetrending.html
@@ -2,16 +2,51 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Trending Shoes</title>
+    <title>Fashion-Insta</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <link rel="preload" as="font" crossorigin="crossorigin" type="font/woff" href="https://constant.myntassets.com/www/fonts/WhitneyHTF-Book.woff">
+    <link rel="preload" as="font" crossorigin="crossorigin" type="font/woff" href="https://constant.myntassets.com/www/fonts/WhitneyHTF-SemiBold.woff">
+    <style>
+        @font-face { font-family: 'Whitney'; font-display: swap; src: url('https://constant.myntassets.com/www/fonts/WhitneyHTF-Book.eot'); src: url('https://constant.myntassets.com/www/fonts/WhitneyHTF-Book.eot?#iefix') format('embedded-opentype'), url('https://constant.myntassets.com/www/fonts/WhitneyHTF-Book.woff') format('woff'), url('https://constant.myntassets.com/www/fonts/WhitneyHTF-Book.ttf') format('truetype'); } @font-face { font-family: 'Whitney'; font-display: swap; font-weight: 600; src: url('https://constant.myntassets.com/www/fonts/WhitneyHTF-SemiBold.eot'); src: url('https://constant.myntassets.com/www/fonts/WhitneyHTF-SemiBold.eot?#iefix') format('embedded-opentype'), url('https://constant.myntassets.com/www/fonts/WhitneyHTF-SemiBold.woff') format('woff'), url('https://constant.myntassets.com/www/fonts/WhitneyHTF-SemiBold.ttf') format('truetype'); }
+        html, body {
+            font-family: Whitney, Helvetica, Arial, sans-serif !important;
+            -webkit-font-smoothing: antialiased;
+            text-rendering: optimizeLegibility;
+            padding:0 !important;
+        }
+    </style>
 </head>
 <!--<body>-->
 <!--<h1>Trending Shoes from Instagram!</h1>>-->
 <!--<img src="pic_trulli.jpg" alt="Italian Trulli">-->
 <!--</body>-->
 <body style="height: 300px">
-<div class="desktop-logoContainer" data-reactid="15" style="height: 50px; width: 50px" ><img width="150" height="100" src="../static/myntra.jpeg" alt="myntra logo"></mg></div>
-<div class="desktop-logoContainer" data-reactid="15" style="padding-top:100px; height: 500px; width: 500px" ><img width="300" height="250" src="../static/shoe1.jpg" alt="myntra logo"></img>
-    <img width="300" height="250" src="../static/shoe2.jpg" alt="myntra logo"></img>
+<div class="desktop-logoContainer row" data-reactid="15" style="height: 50px; width: 50px" ><img width="150" height="100" src="../static/myntra.jpeg" alt="myntra logo"></mg></div>
+<div class="container">
+    <h1>Trending Styles from Instagram</h1>
+    <div class="row">
+        <div class="col-sm shadow-lg p-3 mb-5 bg-white rounded">
+            <div class="card-body">
+            <img width="270" height="250" src="http://assets.myntassets.com/assets/images/11952038/2021/2/11/0e03ed86-f538-4716-9552-2159a3c7cd951613040666700-DressBerry-Women-Green-Solid-Pullover-7021613040664501-1.jpg" alt="myntra logo"></img>
+            <p >XYZ</p>
+            </div>
+        </div>
+        <div class="col-sm shadow-lg p-3 mb-5 bg-white rounded">
+            <div class="card-body">
+            <img width="270" height="250" src="http://assets.myntassets.com/assets/images/productimage/2019/11/21/abcdf7ef-ee11-4d9b-ba73-0c8692a6b5891574277034570-4.jpg" alt="myntra logo"></img>
+            <p >XYZ</p>
+            </div>
+        </div>
+        <div class="card col-sm shadow-lg p-3 mb-5 bg-white rounded">
+        <div class="card-body">
+            <img width="270" height="250" src="http://assets.myntassets.com/assets/images/13583540/2021/6/4/3952f7db-30f9-41c9-bb32-53e78cc6c3b71622780946436-Chemistry-Women-Tops-6411622780945890-5.jpg" alt="myntra logo"></img>
+            <p >XYZ</p>
+        </div>
+        </div>
+    </div>
+
+
 </div>
 
 </body>
