commit #5 with UI

--- a/templates/shoetrending.html
+++ b/templates/shoetrending.html
@@ -26,13 +26,13 @@
 <div class="container">
     <h1>Trending Styles from Instagram</h1>
     <div class="row">
-        <div class="col-sm shadow-lg p-3 mb-5 bg-white rounded">
+        <div class="card col-sm shadow-lg p-3 mb-5 bg-white rounded">
             <div class="card-body">
             <img width="270" height="250" src="http://assets.myntassets.com/assets/images/11952038/2021/2/11/0e03ed86-f538-4716-9552-2159a3c7cd951613040666700-DressBerry-Women-Green-Solid-Pullover-7021613040664501-1.jpg" alt="myntra logo"></img>
             <p >XYZ</p>
             </div>
         </div>
-        <div class="col-sm shadow-lg p-3 mb-5 bg-white rounded">
+        <div class="card col-sm shadow-lg p-3 mb-5 bg-white rounded">
             <div class="card-body">
             <img width="270" height="250" src="http://assets.myntassets.com/assets/images/productimage/2019/11/21/abcdf7ef-ee11-4d9b-ba73-0c8692a6b5891574277034570-4.jpg" alt="myntra logo"></img>
             <p >XYZ</p>
