--- a/templates/dataloaded.html
+++ b/templates/dataloaded.html
@@ -8,6 +8,7 @@
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
         <link rel="preload" as="font" crossorigin="crossorigin" type="font/woff" href="https://constant.myntassets.com/www/fonts/WhitneyHTF-Book.woff">
         <link rel="preload" as="font" crossorigin="crossorigin" type="font/woff" href="https://constant.myntassets.com/www/fonts/WhitneyHTF-SemiBold.woff">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <style>
             @font-face { font-family: 'Whitney'; font-display: swap; src: url('https://constant.myntassets.com/www/fonts/WhitneyHTF-Book.eot'); src: url('https://constant.myntassets.com/www/fonts/WhitneyHTF-Book.eot?#iefix') format('embedded-opentype'), url('https://constant.myntassets.com/www/fonts/WhitneyHTF-Book.woff') format('woff'), url('https://constant.myntassets.com/www/fonts/WhitneyHTF-Book.ttf') format('truetype'); } @font-face { font-family: 'Whitney'; font-display: swap; font-weight: 600; src: url('https://constant.myntassets.com/www/fonts/WhitneyHTF-SemiBold.eot'); src: url('https://constant.myntassets.com/www/fonts/WhitneyHTF-SemiBold.eot?#iefix') format('embedded-opentype'), url('https://constant.myntassets.com/www/fonts/WhitneyHTF-SemiBold.woff') format('woff'), url('https://constant.myntassets.com/www/fonts/WhitneyHTF-SemiBold.ttf') format('truetype'); }
             html, body {
@@ -22,11 +23,49 @@
 <body>
 <div class=" row desktop-logoContainer" data-reactid="15" style="height: 50px; width: 50px" ><img width="150" height="100" src="../static/myntra.jpeg" alt="myntra logo"></mg></div>
 &nbsp;
-<div class="row"><a href="/">Go Back</a></div>
-&nbsp;
+<div class="row"><div class="col"><a href="/">Go Back</a></div></div>
+
 <div class="row">
-    <div class="col"/>
-<div class="col col-lg">Data Loaded Successfully</div>
+    <div class="card col-sm shadow-lg p-3 mb-5 bg-white rounded">
+        <div class="card-body">
+            <img width="500"  src="../static/load1.jpeg" alt="myntra logo"></img>
+            <p >XYZ  <img src="../static/stat.png" height="18" width="18"/></p>
+        </div>
+    </div>
+    <div class="card col-sm shadow-lg p-3 mb-5 bg-white rounded">
+        <div class="card-body">
+            <img width="500"src="../static/load2.jpeg" alt="myntra logo"></img>
+            <p >XYZ</p>
+        </div>
+    </div>
+    <div class="card col-sm shadow-lg p-3 mb-5 bg-white rounded">
+        <div class="card-body container">
+            <img width="500"src="../static/load3.jpeg" alt="myntra logo"></img>
+            <a href="dog.png" download="new-filename"><i class="f"></i></a>
+            <p >XYZ  <img src="../static/stat.png" height="18" width="18"/></p>
+        </div>
+    </div>
+</div>
+<div class="row">
+    <div class="card col-sm shadow-lg p-3 mb-5 bg-white rounded">
+        <div class="card-body">
+            <img width="500"src="../static/load4.jpeg" alt="myntra logo"></img>
+            <p >XYZ</p>
+        </div>
+    </div>
+    <div class="card col-sm shadow-lg p-3 mb-5 bg-white rounded">
+        <div class="card-body">
+            <img width="500"src="../static/load5.jpeg" alt="myntra logo"></img>
+            <p >XYZ</p>
+        </div>
+    </div>
+    <div class="container card col-sm shadow-lg p-3 mb-5 bg-white rounded">
+        <div class="card-body">
+            <img width="500"src="../static/load6.jpeg" alt="myntra logo"></img>
+            <p >XYZ  <img src="../static/stat.png" height="18" width="18"/></p>
+        </div>
+    </div>
+
 </div>
 
 </body>
