--- a/templates/index.html
+++ b/templates/index.html
@@ -49,7 +49,7 @@
 <body>
 <div class="desktop-logoContainer" data-reactid="15" style="height: 50px; width: 50px" ><img width="150" height="100" src="../static/myntra.jpeg" alt="myntra logo"></mg></div>
 <form class="example" action="/getTrendingByCategory" style="margin:auto;max-width:800px">
-    <input type="text" placeholder="Search Trending, for example insta:shoes" name="query">
+    <input type="text" placeholder="Search Trending, for example insta shoes" name="query">
     <button type="submit"><i class="fa fa-search"></i></button>
 </form>
 
